# pml

./: .gitignore  Makefile.tune  README.md  pml.bib  small-todos.txt
flint-extras/: .ycm_extra_conf.py  Makefile  Makefile.am  Makefile.in  TODO  acinclude.m4  configure.ac  doxygen.conf  pml.pc.in  structure-with-configure.md  structure.md
flint-extras/config/: config.guess
flint-extras/dev/: make_dist.sh
flint-extras/fmpz_extra/: fmpz_extra.h
flint-extras/fmpz_extra/src/: fmpz_CRT_CRT.c  fmpz_CRT_clear.c  fmpz_CRT_combine.c  fmpz_CRT_init.c  fmpz_CRT_naive_CRT.c  fmpz_CRT_naive_clear.c  fmpz_CRT_naive_combine.c  fmpz_CRT_naive_init.c  fmpz_multi_CRT_combine.c  fmpz_multimod_CRT_CRT.c  fmpz_multimod_CRT_clear.c  fmpz_multimod_CRT_init.c  fmpz_multimod_CRT_reduce.c  fmpz_multimod_clear.c  fmpz_multimod_init.c  fmpz_multimod_naive_init.c  fmpz_multimod_naive_reduce.c  fmpz_multimod_reduce.c
flint-extras/fmpz_extra/test/: Makefile  test_CRT_CRT.c  test_CRT_combine.c  test_CRT_init_clear.c  test_CRT_naive_CRT.c  test_CRT_naive_combine.c  test_CRT_naive_init_clear.c  test_multimod_CRT_CRT.c  test_multimod_CRT_reduce.c  test_multimod_init_clear.c  test_multimod_naive_init_clear.c  test_multimod_naive_reduce.c  test_multimod_reduce.c
flint-extras/fmpz_extra/timings/: Makefile  time_CRT_CRT.c  time_CRT_naive_CRT.c  time_multimod_CRT_CRT.c  time_multimod_CRT_reduce.c  time_multimod_naive_reduce.c  time_multimod_reduce.c
flint-extras/fmpz_mat_extra/: fmpz_mat_extra.h
flint-extras/fmpz_mat_extra/src/: Makefile  fmpz_mat_mul_multimod_CRT.c  fmpz_mat_mul_waksman.c
flint-extras/fmpz_mat_extra/test/: test_mul_multimod.c  test_mul_waksman.c
flint-extras/fmpz_mat_extra/timings/: time_mul.c  time_mul_multimod.c  time_mul_waksman.c
flint-extras/fmpz_mod_mat_extra/test/: Makefile
flint-extras/fmpz_poly_mat_extra/: fmpz_poly_mat_extra.h
flint-extras/include/: Makefile.am
flint-extras/lib/: Makefile.am
flint-extras/nmod32_vec/: nmod32_vec.h
flint-extras/nmod32_vec/src/: dot2_split.c  dot_msolve.c  dot_split.c  mdot2_split.c  mdot_msolve.c  mdot_split.c
flint-extras/nmod32_vec/test/: test_dot.c  test_mdot.c
flint-extras/nmod32_vec/timings/: time_nmod32_vec_dot.c
flint-extras/nmod_extra/: nmod_extra.h
flint-extras/nmod_extra/src/: nmod_extra.c  nmod_find_root.c  nmod_multimod_CRT_CRT.c  nmod_multimod_CRT_clear.c  nmod_multimod_CRT_init.c  nmod_multimod_CRT_reduce.c
flint-extras/nmod_extra/test/: Makefile  test_512_mulhi_epi32.c  test_multimod_CRT_CRT.c  test_multimod_CRT_reduce.c
flint-extras/nmod_extra/timings/: time_mulshoup.c  time_multimod_CRT_CRT.c  time_multimod_CRT_reduce.c
flint-extras/nmod_mat_extra/: nmod_mat_extra.h
flint-extras/nmod_mat_extra/src/: Makefile  left_nullspace.c  nmod_mat_mul_newdot.c  nmod_mat_mul_small_modulus.c  nmod_mat_pluq.c  nmod_mat_rand.c  nmod_mat_rotations.c
flint-extras/nmod_mat_extra/test/: Makefile  test_nmod_mat_mul_newdot.c  test_nmod_mat_mul_small_modulus.c  test_nmod_mat_rand.c  test_nullspace.c  test_pluq.c  test_rand.c
flint-extras/nmod_mat_extra/tests/: Makefile.am
flint-extras/nmod_mat_extra/timings/: time_matmul_fglm.c  time_nmod_mat_mul.c  time_nmod_mat_mul_small_modulus.c  time_nmod_mat_vec_mul.c  time_pluq.c
flint-extras/nmod_mat_poly_extra/: nmod_mat_poly.h
flint-extras/nmod_mat_poly_extra/src/: nmod_mat_poly_arith.c  nmod_mat_poly_mbasis.c  nmod_mat_poly_mem.c  nmod_mat_poly_set_from.c  nmod_mat_poly_shift.c
flint-extras/nmod_mat_poly_extra/test/: Makefile  test_get_set.c  test_mbasis.c  test_mem.c  test_mul_coeff.c  test_one_zero.c  test_shift.c
flint-extras/nmod_mat_poly_extra/timings/: time_mbasis.c
flint-extras/nmod_poly_extra/: nmod_poly_extra.h  nmod_poly_fft.h  nmod_poly_integer_fft.h
flint-extras/nmod_poly_extra/src/: Makefile  n_fft_evaluate.c  n_fft_evaluate_bench.bak  nmod_32_fft_clear.c  nmod_32_fft_init_set.c  nmod_64_fft_clear.c  nmod_64_fft_evaluate.c  nmod_64_fft_init_set.c  nmod_64_fft_interpolate.c  nmod_avx2_32_fft_clear.c  nmod_avx2_32_fft_evaluate.c  nmod_avx2_32_fft_init_set.c  nmod_avx2_32_fft_interpolate.c  nmod_avx512_32_fft_evaluate.c  nmod_cfft_reduce.c  nmod_double_fft_clear.c  nmod_double_fft_evaluate.c  nmod_double_fft_init_set.c  nmod_fft_clear.c  nmod_fft_evaluate.c  nmod_fft_init.c  nmod_fft_init_set.c  nmod_fft_interpolate.c  nmod_fft_old_evaluate.c  nmod_geometric_progression_clear.c  nmod_geometric_progression_evaluate.c  nmod_geometric_progression_init_set.c  nmod_geometric_progression_interpolate.c  nmod_int128_fft_clear.c  nmod_int128_fft_evaluate.c  nmod_int128_fft_init_set.c  nmod_int128_fft_interpolate.c  nmod_integer_fft_base_cases.c  nmod_integer_fft_evaluate.c  nmod_integer_fft_init.c  nmod_plain_fft_clear.c  nmod_plain_fft_evaluate.c  nmod_plain_fft_init_set.c  nmod_plain_fft_interpolate.c  nmod_poly_fft_helpers.c  (+8 more)
flint-extras/nmod_poly_extra/test/: Makefile  test_64_fft_evaluate.c  test_64_fft_interpolate.c  test_64_tft_evaluate.c  test_64_tft_evaluate_t.c  test_64_tft_interpolate.c  test_64_tft_interpolate_t.c  test_avx2_32_fft_evaluate.c  test_avx2_32_fft_interpolate.c  test_avx2_32_tft_evaluate.c  test_avx2_32_tft_evaluate_t.c  test_avx512_32_fft_evaluate.c  (+27 more)
flint-extras/nmod_poly_mat_extra/: nmod_poly_mat_approximant.h  nmod_poly_mat_arith.h  nmod_poly_mat_extra.h  nmod_poly_mat_forms.h  nmod_poly_mat_io.h  nmod_poly_mat_mat_poly.h  nmod_poly_mat_matpoly.h  nmod_poly_mat_multiply.h  nmod_poly_mat_utils.h
flint-extras/nmod_vec_extra/: nmod_vec_extra.h
flint-extras/sagemath_extra/: sagemath_extra.h
flint-extras/src/: config.h.in  fmpz_extra.h  fmpz_mat_extra.h  fmpz_poly_mat_extra.h  machine_vectors.h  nmod32_vec.h  nmod_extra.h  nmod_mat_extra.h  nmod_mat_poly.h  nmod_poly_extra.h  nmod_poly_fft.h  nmod_poly_mat_approximant.h  nmod_poly_mat_arith.h  nmod_poly_mat_description.bak  nmod_poly_mat_dixon.h  nmod_poly_mat_extra.h  nmod_poly_mat_forms.h  nmod_poly_mat_io.h  nmod_poly_mat_kernel.h  nmod_poly_mat_multiply.h  nmod_poly_mat_utils.h  nmod_vec_extra.h  pml-config.h.in  pml.h.in  sagemath_extra.h
flint-extras/tests/: Makefile.am
(+1371 files in other folders)
